<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/aks"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewSdl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/sdl"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/col"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/score"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

</LinearLayout>