<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/textViewCalcHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/calc_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCalcModule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/calc_module"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spinnerCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCalcScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/calc_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCalcAks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_aks"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextCalcAks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/calc_hint"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCalcSdl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_sdl"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextCalcSdl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/calc_hint"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCalcCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_col"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextCalcCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/calc_hint"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_calc" />
</LinearLayout>
