<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCAGHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cag_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textViewCAGSubHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cag_sub"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCAGAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_add" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewCAG"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
